# quantbot

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  docker-compose.yml  pyproject.toml
apps/api/: __init__.py  config.py  dependencies.py  errors.py  lifespan.py  main.py  responses.py  run.py  util.py
apps/bot/: main.py
apps/frontend/: .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
config/: quantbot.yaml
config/backups/: quantbot_trend_backup_2026-06-06.yaml
deploy/: .env.example  README.md  deploy.sh  docker-compose.yml
deploy/nginx/: quantbot.conf
docs/: quantbot_backend_api_implementation_v1_1.md  quantbot_bot_engine_implementation_v1_3_1.md  quantbot_frontend_dashboard_implementation_v1_1.md  quantbot_no_entry_diagnostic_2026-06-06.md  quantbot_selection_entry_summary_current.md  quantbot_server_architecture_v1_2.md  quantbot_strategy_flow_current.md
scripts/: start-dev.ps1  stop-dev.ps1
tests/: conftest.py
tests/api/: conftest.py  test_bot_status.py  test_commands.py  test_events.py  test_failures.py  test_health.py  test_logs.py  test_maintenance.py  test_orders.py  test_pnl.py  test_positions.py  test_strategy_config.py  test_system_storage.py  test_trades.py  test_watchlist.py  test_websocket.py
tests/e2e/: test_paper_flow.py
tests/fakes/: __init__.py  builders.py  fake_gateway.py
tests/integration/: test_bot_runtime.py  test_bybit_smoke.py  test_runtime_extras.py  test_trading_service.py
(+149 files in other folders)
